se arreglo el bem linia 53

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="contenedor-1">
     <div class="header__titulo">
-                <div class="header__titulo--contenedor">
+                <div class="header__titulo_contenedor">
                     <h1>Cafe de especialidad <span> en triple peaks</span></h1>
                     <h3>¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
 para darte energia y motivar tu creatividad
@@ -50,7 +50,7 @@ Escribe en
 
         <div class="header__horarios">
 
-            <div class="header__horarios--horas">\
+            <div class="header__horarios_horas">
                 <h3>Horarios:</h3>
             <p>Lunes a Viernes (de 10:00h a 19:00h)</p>
             <p>Sabados y Domingos (de 11:00h a 18:00h)</p>
@@ -73,7 +73,7 @@ Escribe en
             <div class="recetas__videos">
                 <div class="recetas__video">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/eNNkG0s9CB0?si=DU76wmYH2aLLA0Hq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <div class="video__texto">
+                        <div class="recetas__videos recetas__video_texto">
                             <p>Recetas Mexicanas</p>
                         <p>~ 5 minutos</p>
                         </div>
@@ -82,15 +82,18 @@ Escribe en
 
                     <div class="recetas__video">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/NoORdx7psw0?si=re2aWmx_jTPnG2iE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            <div class="video__texto">
+                            <div class="recetas__videos recetas__video_texto">
                             <p>Recetas italianas</p>
                             <p>~ 7 minutos</p>
                             </div>
                     </div>
                     </div>
 </div>
-
     </main>
+
+    <footer>
+        
+    </footer>
 
 </div>
     
