--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <nav class="header__nav nav">
             <ul>
                 <li class="header__links"><a href="#recetas">Recetas</a></li>
-                <li class="header__links"><a  href="#">Reservar una mesa </a></li>
-                <li class="header__links"><a href="#">Contactos</a></li>
+                <li class="header__links"><a  href="#reservar">Reservar una mesa </a></li>
+                <li class="header__links"><a href="#contactos">Contactos</a></li>
             </ul>
         </nav>
         </div>
@@ -91,6 +91,20 @@ Escribe en
 
             </div>
                     </div>
+
+ </section>
+
+ <section class="reservar" id="reservar">
+
+ </section>
+
+ 
+ <section class="menu">
+
+ </section>
+
+ 
+ <section class="contactos" id="contactos">
 
  </section>
     </main>
