--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ Escribe en
         </div>
     </header>
 
-    <main class="content " id="recetas">
-        <section class="recetas">
+    <main class="content ">
+        <section class="recetas" id="recetas">
     
         <div class="recetas__contenedor contenedor-1">
             <div class="recetas__heading">
