--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <nav class="header__nav nav">
             <ul>
                 <li class="header__links"><a href="#recetas">Recetas</a></li>
-                <li class="header__links"><a  href="#reservar">Reservar una mesa </a></li>
-                <li class="header__links"><a href="#contactos">Contactos</a></li>
+                <li class="header__links"><a  href="#r">Reservar una mesa </a></li>
+                <li class="header__links"><a href="#">Contactos</a></li>
             </ul>
         </nav>
         </div>
@@ -94,19 +94,20 @@ Escribe en
 
  </section>
 
- <section class="reservar" id="reservar">
+ <section class="reservar">
 
  </section>
 
- 
+  <section class="contactos">
+
+ </section>
+
  <section class="menu">
 
  </section>
 
  
- <section class="contactos" id="contactos">
 
- </section>
     </main>
 
     <footer class="footer">
