--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </div>
         <nav class="header__nav nav">
             <ul>
-                <li class="header__links"><a href="#recetas">Recetas</a></li>
-                <li class="header__links"><a  href="#r">Reservar una mesa </a></li>
+                <li class="header__links"><a href="#recipes">Recetas</a></li>
+                <li class="header__links"><a  href="#">Reservar una mesa </a></li>
                 <li class="header__links"><a href="#">Contactos</a></li>
             </ul>
         </nav>
@@ -64,26 +64,26 @@ Escribe en
     </header>
 
     <main class="content ">
-        <section class="recetas" id="recetas">
+        <section class="recipes" id="recipes">
     
-        <div class="recetas__contenedor contenedor-1">
-            <div class="recetas__heading">
+        <div class="recipes__contenedor contenedor-1">
+            <div class="recipes__heading">
                 <h2>Recetas</h2>
                 <p>Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks</p>
             </div>
 
-            <div class="recetas__videos">
-                <div class="recetas__video">
+            <div class="recipes__videos">
+                <div class="recipes__video">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/NoORdx7psw0?si=re2aWmx_jTPnG2iE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                   <div class="recetas__texto">
+                   <div class="recipes__texto">
                         <p>Recetas Mexicanas</p>
                     <p>~ 5 minutos</p>
                     </div>
                 </div>
 
-                  <div class="recetas__video">
+                  <div class="recipes__video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/eNNkG0s9CB0?si=NHoUCMscIRIyPkdB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <div class="recetas__texto">
+                    <div class="recipes__texto">
                         <p>Recetas Italianas</p>
                     <p>~ 7 minutos</p>
                     </div>
@@ -94,17 +94,11 @@ Escribe en
 
  </section>
 
- <section class="reservar">
+ <section class="reservation">
 
  </section>
 
-  <section class="contactos">
 
- </section>
-
- <section class="menu">
-
- </section>
 
  
 
