--- a/index.html
+++ b/index.html
@@ -17,51 +17,27 @@
 <body>
 <div class="page">
 
-    <header class="header">
-        <div class="header__barra">
-            <div class="header__logo">
-            <img src="./images/logo_coffeeshop_dark.svg" alt="logo-cafe">
+    <header class="header contenedor-1" >
+    <nav class="nav">
+        <img src="./images/logo_coffeeshop_dark.svg" alt="logo" class="nav__logo">
+        <div class="nav__links">
+            <a href="#recipes" class="nav__link">Recetas</a>
+            <a href="#reservation" class="nav__link">Reservar una mesa</a>
+            <a href="#about" class="nav__link">Contactos</a>
         </div>
-        <nav class="header__nav nav">
-            <ul>
-                <li class="header__links"><a href="#recipes">Recetas</a></li>
-                <li class="header__links"><a  href="#">Reservar una mesa </a></li>
-                <li class="header__links"><a href="#">Contactos</a></li>
-            </ul>
-        </nav>
-        </div>
+    </nav>
 
-        <div class="header__titulos contenedor-1">
-    <div class="header__titulo">
-                <div class="header__textos">
-                    <h1>Cafe de especialidad <span> en triple peaks</span></h1>
-                    <h3>¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
-para darte energia y motivar tu creatividad
-Enviado
-Escribe en
-</h3>
-                </div>
-
-
-            <div class="header__imagen">
-                <img src="/images/inside_coffee_shop.png" alt="imagen-cafe" width="700">
-            </div>
-        </div>
-
-        <div class="header__horarios">
-
-            <div class=" header__horario">
-                <h3>Horarios:</h3>
-            <p>Lunes a Viernes (de 10:00h a 19:00h)</p>
-            <p>Sabados y Domingos (de 11:00h a 18:00h)</p>
-            </div>
-
-            <div>
-                <p>Avenid  el exito 200, Ciudad Triple peaks</p>
-            </div>
-        </div>
-        </div>
-    </header>
+    <div class="header__contenedor">
+        <div class="header__textos">
+            <h1>Cafe de especialidad <span> en triple peaks</span></h1>
+            <h3>¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
+                para darte energia y motivar tu creatividad Enviado Escribe en</h3>
+</div>
+                    <div class="header__imagen">
+                        <img src="./images/inside_coffee_shop.png" width="700px">
+                    </div>
+    </div>
+</header>
 
     <main class="content ">
         <section class="recipes" id="recipes">
@@ -74,15 +50,15 @@ Escribe en
 
             <div class="recipes__videos">
                 <div class="recipes__video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NoORdx7psw0?si=re2aWmx_jTPnG2iE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                   <div class="recipes__texto">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NoORdx7psw0?si=re2aWmx_jTPnG2iE" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="recipes__texto">
                         <p>Recetas Mexicanas</p>
                     <p>~ 5 minutos</p>
                     </div>
                 </div>
 
-                  <div class="recipes__video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/eNNkG0s9CB0?si=NHoUCMscIRIyPkdB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="recipes__video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/eNNkG0s9CB0?si=NHoUCMscIRIyPkdB" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <div class="recipes__texto">
                         <p>Recetas Italianas</p>
                     <p>~ 7 minutos</p>
@@ -92,15 +68,15 @@ Escribe en
             </div>
                     </div>
 
- </section>
+    </section>
 
- <section class="reservation">
+    <section class="reservation">
 
- </section>
+    </section>
 
 
 
- 
+
 
     </main>
 
