--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                     </div>
     </div>
 
-        <div class="header__horarios">
+        <div class="header__footer">
 
-            <div class=" header__horario">
-                <h3>Horarios:</h3>
-            <p>Lunes a Viernes (de 10:00h a 19:00h)</p>
-            <p>Sabados y Domingos (de 11:00h a 18:00h)</p>
+            <div class=" header__footer-horas">
+                <p class="header__paragraph">Horarios:</p>
+            <p class="header__paragraph">Lunes a Viernes (de 10:00h a 19:00h)</p>
+            <p class="header__paragraph">Sabados y Domingos (de 11:00h a 18:00h)</p>
             </div>
 
             <div>
-                <p>Avenid  el exito 200, Ciudad Triple peaks</p>
+                <p class="header__paragraph">Avenid  el exito 200, Ciudad Triple peaks</p>
             </div>
         </div>
 </header>
@@ -102,13 +102,6 @@
     </main>
 
     <footer class="footer">
-        <div class="header__footer">
-            <p class="header__paragraph"></p>
-            <p class="header__paragraph"></p>
-            <p class="header__paragraph"></p>
-            <p class="header__paragraph"></p>
-        </div>
-
     </footer>
 
 </div>
