--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
     
       <div class="reservation__form form">
-          <form class="form__reservation">
+          <form class="form__reservation form">
               
                     <label class="form__label"> nombre</label>
                     <input class="form__input" type="text" placeholder="Nombre" required>
