form__reservation_dark agregado

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <p >Reserva una mesa </p>
         </div>
     
-      <div class="reservation__form form">
-          <form class="form__reservation form">
+      <div class="reservation__form ">
+          <form class="form__reservation form__reservation_dark ">
               
                     <label class="form__label"> nombre</label>
                     <input class="form__input" type="text" placeholder="Nombre" required>
