--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             <p >Reserva una mesa </p>
         </div>
     
-      <div class="reservation__form form">
-          <form class="form form__reservation  ">
+   
+          <form class="reservation__form form ">
             <fieldset>  
                 <label class="form__label"> nombre</label>
                     <input class="form__input" type="text" placeholder="Nombre" required>
@@ -125,7 +125,7 @@
 </fieldset>              
                   
             </form>
-</div>
+
 
     </section>
 
