--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
 
-    <div class="header__contenedor header__title" >
+    <div class="header__contenedor" >
         <div class="header__textos">
             <h1 class="header__title">Cafe de especialidad <span> en triple peaks</span></h1>
             <p class="header__description">¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
@@ -136,13 +136,13 @@
     </main>
 
 <footer class="footer" id="contactos" >
-    <div class="footer__columns" >
+    <div class="footer__columns footer__content" >
 
         <div class="footer__column">
-            <img src="./images/logo_coffeeshop_light.svg"  alt="logo" class="footer__logo">
+            <img src="./images/logo_coffeeshop_light.svg"  alt="logo" class="footer__logo footer__circle">
         </div>
 
-        <div class="footer__column footer__column_content_social">
+        <div class="footer__column footer__column_content_social footer__social">
             <h3 class="footer__column-heading" >Redes sociales</h3>
             <ul class="footer__list">
             <li class="footer__list-item"><a href="#" class="footer__column-link">  
