header__title agregado

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
 
-    <div class="header__contenedor" >
+    <div class="header__contenedor header__title" >
         <div class="header__textos">
             <h1 class="header__title">Cafe de especialidad <span> en triple peaks</span></h1>
             <p class="header__description">¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café
