--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="es">
   <head>
     <title>Triple Coffee</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Project 4 Coffe shop with HTML and CSS" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="author" content="Felipe Nehmi" />
+    <meta name="keywords" content="HTML and CSS" />
+    <meta name="author" content="cris sandoval" />
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,7 +25,7 @@
             alt="Triple Peaks Library Logo"
             class="nav__logo"
           />
-          <!-- Putting navigation links in a list is supposed to be the best practice of writing the semantic code since it allows screen readers to pause between each link instead of reading all the links as a sentence. -->
+        
           <ul class="nav__links">
             <li>
               <a class="nav__link" href="#recipes">recetas</a>
